Skip Google Chat notification if webhook URL is unset
Add check for GCHAT_WEBHOOK_URL before sending notification

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,6 +88,10 @@ jobs:
       - name: Notify Google Chat Space
         if: always()
         run: |
+          if [ -z "${{ secrets.GCHAT_WEBHOOK_URL }}" ]; then
+            echo "⚠️ GCHAT_WEBHOOK_URL not set, skipping notification" 
+            exit 0 
+          fi
           STATUS="✅ PASSED"
           if [ "$FAILED" -gt 0 ]; then STATUS="❌ FAILED"; fi
 
