--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -108,9 +108,8 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
-          destination_dir: ${{ github.ref_name }}
-          publish_dir: ${{ env.REPORT_DIR }}/..
-          keep_files: true
+          publish_dir: build/reports/allure-report/allureReport
+          keep_files: false
 
       # --------------------
       # Cleanup old branches
