--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -156,6 +156,9 @@ jobs:
       # --------------------
       # Notify Google Chat
       # --------------------
+      # --------------------
+      # Notify Google Chat
+      # --------------------
       - name: Notify Google Chat Space
         run: |
           PASSED=${{ needs.report.outputs.passed }}
@@ -191,15 +194,13 @@ jobs:
           DURATION_REM=$((DURATION_SEC % 60))
 
           # --------------------
-          # Commit info
+          # Report URL
           # --------------------
-          COMMIT_SHA=$(git rev-parse --short HEAD)
-          COMMIT_MSG=$(git log -1 --pretty=%s)
-          COMMIT_AUTHOR="${{ github.actor }}"
-          COMMIT_URL="https://github.com/${{ github.repository }}/commit/${{ github.sha }}"
-
           REPORT_URL="https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/allureReport/"
 
+          # --------------------
+          # Payload
+          # --------------------
           PAYLOAD=$(cat <<EOF
           {
             "cardsV2": [
@@ -214,55 +215,16 @@ jobs:
                   "sections": [
                     {
                       "widgets": [
-                        {
-                          "decoratedText": {
-                            "text": "<b>📊 Test Results</b>"
-                          }
-                        },
-                        {
-                          "decoratedText": {
-                            "text": "✅ Passed: <b>${PASSED}</b>"
-                          }
-                        },
-                        {
-                          "decoratedText": {
-                            "text": "❌ Failed: <b>${FAILED}</b>"
-                          }
-                        },
-                        {
-                          "decoratedText": {
-                            "text": "⚠️ Broken: <b>${BROKEN}</b>"
-                          }
-                        },
-                        {
-                          "decoratedText": {
-                            "text": "📈 Total: <b>${TOTAL}</b>"
-                          }
-                        }
+                        {"decoratedText": {"text": "<b>📊 Test Results</b>"}},
+                        {"decoratedText": {"text": "✅ Passed: <b>${PASSED}</b>"}},
+                        {"decoratedText": {"text": "❌ Failed: <b>${FAILED}</b>"}},
+                        {"decoratedText": {"text": "⚠️ Broken: <b>${BROKEN}</b>"}},
+                        {"decoratedText": {"text": "📈 Total: <b>${TOTAL}</b>"}}
                       ]
                     },
                     {
                       "widgets": [
-                        {
-                          "decoratedText": {
-                            "text": "<b>⏱ Duration</b>: ${DURATION_MIN}m ${DURATION_REM}s"
-                          }
-                        },
-                        {
-                          "decoratedText": {
-                            "text": "<b>👤 Author</b>: ${COMMIT_AUTHOR}"
-                          }
-                        },
-                        {
-                          "decoratedText": {
-                            "text": "<b>🔖 Commit</b>: <a href='${COMMIT_URL}'>${COMMIT_SHA}</a>"
-                          }
-                        },
-                        {
-                          "decoratedText": {
-                            "text": "<i>${COMMIT_MSG}</i>"
-                          }
-                        }
+                        {"decoratedText": {"text": "<b>⏱ Duration</b>: ${DURATION_MIN}m ${DURATION_REM}s"}}
                       ]
                     },
                     {
@@ -272,11 +234,7 @@ jobs:
                             "buttons": [
                               {
                                 "text": "📄 View Allure Report",
-                                "onClick": {
-                                  "openLink": {
-                                    "url": "${REPORT_URL}"
-                                  }
-                                }
+                                "onClick": {"openLink": {"url": "${REPORT_URL}"}}
                               }
                             ]
                           }
@@ -294,7 +252,7 @@ jobs:
           curl -X POST "${{ secrets.GCHAT_WEBHOOK_URL }}" \
             -H "Content-Type: application/json" \
             -d "$PAYLOAD"
-      
+
 
       # --------------------
       # Publish to GitHub Pages
