--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - develop
   pull_request:
   workflow_dispatch:
 
@@ -23,6 +24,7 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
+
     steps:
       # --------------------
       # Checkout código
@@ -57,13 +59,14 @@ jobs:
           path: ${{ env.RESULTS_DIR }}
 
   # =========================
-  # 2️⃣ REPORTE
+  # 2️⃣ REPORT
   # =========================
 
   report:
     needs: test
     if: always()
     runs-on: ubuntu-latest
+
     outputs:
       passed: ${{ steps.metrics.outputs.passed }}
       failed: ${{ steps.metrics.outputs.failed }}
@@ -84,13 +87,15 @@ jobs:
         run: chmod +x gradlew
 
       # --------------------
-      # Carga Allure history
+      # Load Allure history
       # --------------------
       - name: Load Allure history
         run: |
           git fetch origin gh-pages || true
+
           if git show-ref --quiet refs/remotes/origin/gh-pages; then
             git worktree add gh-pages origin/gh-pages
+
             if [ -d gh-pages/allureReport/history ]; then
               mkdir -p "$RESULTS_DIR/history"
               cp -r gh-pages/allureReport/history/* "$RESULTS_DIR/history/"
@@ -101,7 +106,7 @@ jobs:
           fi
 
       # --------------------
-      # Generación Allure report
+      # Generate Allure report
       # --------------------
       - name: Generate Allure report
         run: ./gradlew allureReport
@@ -113,7 +118,7 @@ jobs:
           path: ${{ env.REPORT_DIR }}
 
       # --------------------
-      # Extraer resultados
+      # Extract results
       # --------------------
       - name: Extract Allure metrics
         id: metrics
@@ -131,15 +136,15 @@ jobs:
           echo "failed=$FAILED" >> $GITHUB_OUTPUT
           echo "broken=$BROKEN" >> $GITHUB_OUTPUT
           echo "total=$TOTAL" >> $GITHUB_OUTPUT
-          
- # =========================
- # 3️⃣ PUBLICACIÓN
- # =========================
+
+  # =========================
+  # 3️⃣ PUBLISH
+  # =========================
 
   publish:
     needs: report
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' || github.event_name == 'pull_request'
+    if: always()
 
     steps:
       - name: Download Allure report
@@ -149,36 +154,46 @@ jobs:
           path: ${{ env.REPORT_DIR }}
 
       # --------------------
-      # Notificación Google Chat
+      # Notify Google Chat
       # --------------------
       - name: Notify Google Chat Space
         run: |
+          # --------------------
+          # Test metrics
+          # --------------------
           PASSED=${{ needs.report.outputs.passed }}
           FAILED=${{ needs.report.outputs.failed }}
           BROKEN=${{ needs.report.outputs.broken }}
           TOTAL=${{ needs.report.outputs.total }}
 
+          # --------------------
+          # Check webhook
+          # --------------------
           if [ -z "${{ secrets.GCHAT_WEBHOOK_URL }}" ]; then
             echo "⚠️ GCHAT_WEBHOOK_URL not set, skipping notification"
             exit 0
           fi
 
           # --------------------
-          # Status
+          # Status and color
           # --------------------
-          STATUS_TEXT="PASSED"
-          STATUS_EMOJI="✅"
-          STATUS_COLOR="#34A853"
-
           if [ "$FAILED" -gt 0 ]; then
             STATUS_TEXT="FAILED"
             STATUS_EMOJI="❌"
             STATUS_COLOR="#EA4335"
+          elif [ "$BROKEN" -gt 0 ]; then
+            STATUS_TEXT="BROKEN"
+            STATUS_EMOJI="⚠️"
+            STATUS_COLOR="#FBBC05"
+          else
+            STATUS_TEXT="PASSED"
+            STATUS_EMOJI="✅"
+            STATUS_COLOR="#34A853"
           fi
 
-        # --------------------
-        # Duración
-        # --------------------
+          # --------------------
+          # Duration
+          # --------------------
           START_TIME=$(date -d "${GITHUB_RUN_STARTED_AT}" +%s)
           END_TIME=$(date +%s)
           DURATION_SEC=$((END_TIME - START_TIME))
@@ -186,15 +201,18 @@ jobs:
           DURATION_REM=$((DURATION_SEC % 60))
 
           # --------------------
-          # Commit info
+          # Branch real
           # --------------------
-          COMMIT_SHA=$(git rev-parse --short HEAD)
-          COMMIT_MSG=$(git log -1 --pretty=%s)
-          COMMIT_AUTHOR="${{ github.actor }}"
-          COMMIT_URL="https://github.com/${{ github.repository }}/commit/${{ github.sha }}"
+          BRANCH_NAME="${GITHUB_HEAD_REF:-${GITHUB_REF_NAME}}"
 
+          # --------------------
+          # Report URL
+          # --------------------
           REPORT_URL="https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/allureReport/"
 
+          # --------------------
+          # Payload JSON
+          # --------------------
           PAYLOAD=$(cat <<EOF
           {
             "cardsV2": [
@@ -203,61 +221,22 @@ jobs:
                 "card": {
                   "header": {
                     "title": "Selenium CI – ${STATUS_EMOJI} ${STATUS_TEXT}",
-                    "subtitle": "Branch: ${{ github.ref_name }}",
+                    "subtitle": "Branch: ${BRANCH_NAME}",
                     "imageUrl": "https://avatars.githubusercontent.com/${{ github.repository_owner }}"
                   },
                   "sections": [
                     {
                       "widgets": [
-                        {
-                          "decoratedText": {
-                            "text": "<b>📊 Test Results</b>"
-                          }
-                        },
-                        {
-                          "decoratedText": {
-                            "text": "✅ Passed: <b>${PASSED}</b>"
-                          }
-                        },
-                        {
-                          "decoratedText": {
-                            "text": "❌ Failed: <b>${FAILED}</b>"
-                          }
-                        },
-                        {
-                          "decoratedText": {
-                            "text": "⚠️ Broken: <b>${BROKEN}</b>"
-                          }
-                        },
-                        {
-                          "decoratedText": {
-                            "text": "📈 Total: <b>${TOTAL}</b>"
-                          }
-                        }
+                        {"decoratedText": {"text": "<b>📊 Test Results</b>"}},
+                        {"decoratedText": {"text": "✅ Passed: <b>${PASSED}</b>"}},
+                        {"decoratedText": {"text": "❌ Failed: <b>${FAILED}</b>"}},
+                        {"decoratedText": {"text": "⚠️ Broken: <b>${BROKEN}</b>"}},
+                        {"decoratedText": {"text": "📈 Total: <b>${TOTAL}</b>"}}
                       ]
                     },
                     {
                       "widgets": [
-                        {
-                          "decoratedText": {
-                            "text": "<b>⏱ Duration</b>: ${DURATION_MIN}m ${DURATION_REM}s"
-                          }
-                        },
-                        {
-                          "decoratedText": {
-                            "text": "<b>👤 Author</b>: ${COMMIT_AUTHOR}"
-                          }
-                        },
-                        {
-                          "decoratedText": {
-                            "text": "<b>🔖 Commit</b>: <a href='${COMMIT_URL}'>${COMMIT_SHA}</a>"
-                          }
-                        },
-                        {
-                          "decoratedText": {
-                            "text": "<i>${COMMIT_MSG}</i>"
-                          }
-                        }
+                        {"decoratedText": {"text": "<b>⏱ Duration</b>: ${DURATION_MIN}m ${DURATION_REM}s"}}
                       ]
                     },
                     {
@@ -267,11 +246,7 @@ jobs:
                             "buttons": [
                               {
                                 "text": "📄 View Allure Report",
-                                "onClick": {
-                                  "openLink": {
-                                    "url": "${REPORT_URL}"
-                                  }
-                                }
+                                "onClick": {"openLink": {"url": "${REPORT_URL}"}}
                               }
                             ]
                           }
@@ -286,10 +261,12 @@ jobs:
           EOF
           )
 
-          curl -X POST "${{ secrets.GCHAT_WEBHOOK_URL }}" \
+          # --------------------
+          # Send notification safely
+          # --------------------
+          RESPONSE=$(curl -s -w "%{http_code}" -o /tmp/gchat_response.txt -X POST "${{ secrets.GCHAT_WEBHOOK_URL }}" \
             -H "Content-Type: application/json" \
-            -d "$PAYLOAD"
-      
+            -d "$PAYLOAD") || true
 
           if [ "$RESPONSE" -ge 400 ]; then
             echo "⚠️ Failed to send Google Chat notification. HTTP code: $RESPONSE"
@@ -298,25 +275,11 @@ jobs:
             echo "✅ Google Chat notification sent successfully."
           fi
 
-
-          if [ "$RESPONSE" -ge 400 ]; then
-            echo "⚠️ Failed to send Google Chat notification. HTTP code: $RESPONSE"
-            cat /tmp/gchat_response.txt
-          else
-            echo "✅ Google Chat notification sent successfully."
-          fi
-
-
-          if [ "$RESPONSE" != "200" ]; then
-            echo "⚠️ Google Chat notification failed (HTTP $RESPONSE)"
-          else
-            echo "✅ Google Chat notification sent successfully"
-          fi
-
-      # ---------------------------
-      # Publicación en GitHub Pages
-      # ---------------------------
+      # --------------------
+      # Publish to GitHub Pages
+      # --------------------
       - name: Publish Allure report to GitHub Pages
+        if: github.ref == 'refs/heads/main'
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
